# ImageUnderstanding

./: .gitignore  CMakeLists.txt  KFoldValidation.cpp  KFoldValidation.h  README.md  citaviFiles.bib  features.txt
doc/: Report.bbl  Report.blg  Report.tex  citaviFiles.bib  matrix.xlsx  test.xlsx
doc/results/: confMatrix1498845820.csv  confMatriximagesize =256 cellsize =  LBP 32 type = SVM nu = 0.006811.csv  confMatriximagesize =64 cellsize = 8 type = BOOST nu = 0.003844.csv  confMatriximagesize =64 cellsize = 8 type = SVM nu = 0.004652.csv
doc/results/LBP_David/: confMatriximagesize =64 cellsize = 64 type = SVM nu = 0.003844.csv  confMatriximagesize =64 cellsize = 64 type = SVM nu = 0.004229.csv  confMatriximagesize =64 cellsize = 64 type = SVM nu = 0.004652.csv  confMatriximagesize =64 cellsize = 64 type = SVM nu = 0.005117.csv  confMatriximagesize =64 cellsize = 8 type = SVM nu = 0.003844.csv  confMatriximagesize =64 cellsize = 8 type = SVM nu = 0.004229.csv  confMatriximagesize =64 cellsize = 8 type = SVM nu = 0.004652.csv  confMatriximagesize =64 cellsize = 8 type = SVM nu = 0.005117.csv  confMatriximagesize =64 cellsize = 8 type = SVM nu = 0.005628.csv  confMatriximagesize =64 cellsize = 8 type = SVM nu = 0.006191.csv
include/: Calltech_Image_Matrix.h  ClassifierData.h  KFoldValidation.h  error_metrics.h
libs/: .gitignore
src/: Calltech_Image_Matrix.cpp  Calltech_Image_Matrix.h  ClassifierData.cpp  KFoldValidation.cpp  main.cpp
